--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- CSS Files
   ========================================================= -->
   <!-- Google web fonts - Open Sans -->
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
   <!-- /Google web fonts -->
   <!-- Bootstrap CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -947,7 +947,7 @@
 <!-- Javascript Files
 ========================================================= -->
 <!-- jQuery (necessary for plugins) -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <!-- /jquery -->
 <!-- bootstrap -->
 <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
