Add passed courses to index.html

--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
               <!-- Item Content -->
               <div class="col-md-8 content-wrap bg1">
                 <!-- Section title -->
-                <h2 class="section-title">پروژه های اخیر</h2>
+                <h2 class="section-title">پروژه هاو دوره های گذرانده شده اخیر</h2>
                 <!-- /Section title -->
               </div>
               <!-- /Item Content -->
@@ -743,6 +743,36 @@
 
                       Design and construction of shopping cart, reservation system (transactions), payment system, wallet with the possibility of money transfer, the main admin panel of the site, support panel, collection manager panel, issuance of printable purchase invoice along with sending the reservation code to the user and ...</p>
                     <p>JavaScript, PHP, HTML, jQuery, CSS, MySQL, Ajax, MySQLi, Bootstrap 4, SASS</p>
+                  </div>
+                  <!-- /Content -->
+                </div>
+              </div>
+              <!--/Item Content -->
+              <!-- Margin Collums (necessary for the timeline effect) -->
+              <div class="col-md-2 timeline-progress hidden-sm hidden-xs full-height timeline-education "></div>
+              <div class="col-md-1 bg1 timeline-space full-height hidden-sm hidden-xs"></div>
+              <!-- /Margin Collums -->
+            </div>
+            <!-- /SECTION ITEM -->
+            <!-- SECTION ITEM -->
+            <div class="line row">
+              <!-- Margin Collum-->
+              <div class="col-md-1 bg1 timeline-space full-height hidden-sm hidden-xs"></div>
+              <!-- /Margin Collum-->
+              <!-- Item Content -->
+              <div class="col-md-8 content-wrap bg1">
+                <div class="line-content line-content-education">
+                  <!-- Graduation title -->
+                  <h3 class="section-item-title-1">آشنایی با مهارتهای لازم ورود به کسب و کار حوزه IT</h3>
+                  <!-- /Graduation title -->
+                  <!-- Graduation time -->
+                  <h4 class="graduation-time"><i class="fa fa-university"></i> دانشگاه پیام نور استان همدان - <span class="graduation-date">بهمن 98</span></h4>
+                  <!-- /Graduation time -->
+                  <!-- content -->
+                  <div class="graduation-description">
+                    <p> معرفی تکنولوژی های روز برنامه نویسی وب و اندروید و چشم انداز آینده</p>
+                    <p>نقشه راه استارت آپ ها</p>
+                    <p>تجاری سازی ایده های حوزه IT</p>
                   </div>
                   <!-- /Content -->
                 </div>
