--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <li><a href="#intro">معرفی <i class="fa fa-angle-left"></i></a></li>
       <li><a href="#works">تجربه کاری <i class="fa fa-angle-left"></i></a></li>
       <li><a href="#skills">مهارت ها <i class="fa fa-angle-left"></i></a></li>
-      <li><a href="#education">پروژه ها و دوره های گذرانده شده اخیر <i class="fa fa-angle-left"></i></a></li>
+      <li><a href="#education">پروژه ها و دوره های اخیر <i class="fa fa-angle-left"></i></a></li>
       <li><a href="#portfolio">زبان ها <i class="fa fa-angle-left"></i></a></li>
       <li><a href="#contact">تماس <i class="fa fa-angle-left"></i></a></li>
     </ul>
